Implement Translation in Navbar section
Need to fix spanish json, doesnt apply correctly, only "Home" part applies.

--- a/frontend_react/public/assets/locales/en/translation.json
+++ b/frontend_react/public/assets/locales/en/translation.json
@@ -1,3 +1,8 @@
 {
-    "welcome_to_react": "Welcome to React and react"
+    "nav_home": "Home",
+    "nav_about": "About",
+    "nav_work": "Work",
+    "nav_testimonials": "Testimonials",
+    "nav_skills": "Skills",
+    "nav_contact": "Contact"
 }
